--- a/src/main/resources/com/example/rupizzeria/chicago-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/chicago-view.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
@@ -21,7 +21,6 @@
             <Font name="Kristen ITC" size="30.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="chooseType" layoutX="43.0" layoutY="91.0" prefWidth="150.0" />
       <RadioButton fx:id="small" layoutX="46.0" layoutY="148.0" mnemonicParsing="false" text="Small">
          <toggleGroup>
             <ToggleGroup fx:id="size" />
@@ -58,5 +57,6 @@
       <ImageView fx:id="greenpepperLayer" fitHeight="150.0" fitWidth="200.0" layoutX="373.0" layoutY="82.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="sausageLayer" fitHeight="150.0" fitWidth="200.0" layoutX="373.0" layoutY="82.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="bbqchickenLayer" fitHeight="150.0" fitWidth="200.0" layoutX="373.0" layoutY="82.0" pickOnBounds="true" preserveRatio="true" />
+      <ComboBox fx:id="chooseType" layoutX="46.0" layoutY="90.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
