--- a/src/main/resources/com/example/rupizzeria/currentorders-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/currentorders-view.fxml
@@ -28,12 +28,14 @@
       <Text layoutX="225.0" layoutY="436.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sales Tax $" />
       <TextField fx:id="salesTax" layoutX="292.0" layoutY="419.0" prefHeight="25.0" prefWidth="78.0" />
       <Button fx:id="removePizzaButton" layoutX="54.0" layoutY="473.0" mnemonicParsing="false" onAction="#onRemovePizzaClick" text="Remove Pizza" />
-      <Button fx:id="clearOrderButton" layoutX="254.0" layoutY="473.0" mnemonicParsing="false" text="Clear Order" onAction="#onClearOrderClick"/>
+      <Button fx:id="clearOrderButton" layoutX="254.0" layoutY="473.0" mnemonicParsing="false" onAction="#onClearOrderClick" text="Clear Order" />
       <Rectangle fx:id="homeButtonRec" arcHeight="5.0" arcWidth="5.0" fill="#d6b0b0" height="41.0" layoutX="565.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" width="41.0" />
       <ImageView fx:id="homeButton" fitHeight="52.0" fitWidth="53.0" layoutX="559.0" layoutY="9.0" onMousePressed="#handleHomeButtonClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/homeButton_processed.jpg" />
          </image>
       </ImageView>
+      <Text layoutX="292.0" layoutY="118.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Number of Pizzas:" />
+      <TextField fx:id="totalNumberOfPizzas" layoutX="432.0" layoutY="102.0" />
    </children>
 </AnchorPane>
